pkg/lang/testdata/ub/inputs/invalid/duplicate-name.ub
inputs: {
  region: { type: string }
  region: { type: integer }
}
